--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		"mouf/utils.i18n.fine.language-detection": "~4.0",
 		"mouf/utils.i18n.fine.file-translator": "~4.0",
 		"mouf/utils.i18n.fine.common": "~4.0",
-		"mouf/security.user-management-ui-interface": "~1.0"
+		"mouf/security.user-management-ui-interface": "~1.0",
+		"mouf/html.widgets.evolugrid": "~5.1"
 	},
     "require-dev" : {
 	    "phpunit/phpunit": "^5.4.6",
